# kyron

./: .bazelrc  .gitignore  .justfile  BUILD  Cargo.toml  MODULE.bazel  README.md  pyproject.toml  rustfmt.toml  tarpaulin-report.html  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
component_integration_tests/: README.md
component_integration_tests/rust_test_scenarios/: BUILD  Cargo.toml  README.md
component_integration_tests/rust_test_scenarios/src/: main.rs
component_integration_tests/rust_test_scenarios/src/internals/: execution_barrier.rs  net_helper.rs  runtime_helper.rs
component_integration_tests/rust_test_scenarios/src/internals/helpers/: execution_barrier.rs  mod.rs  monotonic_clock.rs  runtime_helper.rs
component_integration_tests/rust_test_scenarios/src/tests/: mod.rs
component_integration_tests/rust_test_scenarios/src/tests/basic/: basic_tests.rs  demo.rs  only_shutdown_sequence.rs  program_runs.rs
component_integration_tests/rust_test_scenarios/src/tests/runtime/: mod.rs  worker_basic_tests.rs  worker_with_blocking_tasks.rs  worker_with_blocking_tasks_tests.rs
component_integration_tests/rust_test_scenarios/src/tests/runtime/channel/: channel_spsc.rs  mod.rs  spmc_broadcast.rs  spsc.rs
component_integration_tests/rust_test_scenarios/src/tests/runtime/execution_engine/: single_rt_multiple_exec_engine.rs
component_integration_tests/rust_test_scenarios/src/tests/runtime/net/tcp/: mod.rs  server.rs
component_integration_tests/rust_test_scenarios/src/tests/runtime/sleep/: mod.rs  sleep_basic.rs
component_integration_tests/rust_test_scenarios/src/tests/runtime/tcp/: mod.rs  server.rs  tcp_listener.rs  tcp_stream.rs  udp_client.rs  udp_server.rs
component_integration_tests/rust_test_scenarios/src/tests/runtime/worker/: dedicated_worker.rs  mod.rs  num_workers.rs  thread_affinity.rs  thread_priority.rs  worker_basic.rs  worker_with_blocking_tasks.rs
docs/: qnx.md
examples/: BUILD  README.md  main_macro.rs  mpmc.rs  playground.rs  safety_task.rs  select.rs
main/: genindex.html  index.html  needs.json  schema_violations.json  search.html  searchindex.js
patches/: BUILD  qnx8_iceoryx2.patch
pr-2/: genindex.html
pr-3/: needs.json  objects.inv
scripts/: build_qnx8.sh  build_qnx_rust_toolchain.sh  run_component_tests.sh  run_on_qnx8.sh
src/async_runtime/: BUILD  Cargo.toml
src/async_runtime/doc/: io_driver.md
src/async_runtime/examples/: main_macro.rs  mpmc.rs  playground.rs  select.rs
src/async_runtime/src/: lib.rs  prelude.rs  safety.rs
src/async_runtime/src/channels/: mod.rs  spmc_broadcast.rs  spsc.rs
src/async_runtime/src/core/: types.rs
src/async_runtime/src/futures/: mod.rs  reusable_box_future.rs  sleep.rs
src/async_runtime/src/io/: async_registration.rs  bridgedfd.rs  driver.rs  mod.rs  read_buf.rs  traits.rs
src/async_runtime/src/io/utils/: read_future.rs
src/async_runtime/src/macros/: select.rs
src/async_runtime/src/mio/: mod.rs  poll.rs  types.rs
src/async_runtime/src/mio/net/: tcp_listener.rs  tcp_stream.rs  udp.rs
src/async_runtime/src/mio/selector/unix/: poll.rs
src/async_runtime/src/net/: tcp_stream.rs  utils.rs
src/async_runtime/src/runtime/: async_runtime.rs
src/async_runtime/src/scheduler/: context.rs  driver.rs  execution_engine.rs  join_handle.rs  mod.rs  safety_waker.rs  scheduler_mt.rs  waker.rs
src/async_runtime/src/scheduler/task/: async_task.rs  task_state.rs
src/async_runtime/src/scheduler/workers/: dedicated_worker.rs  mod.rs  safety_worker.rs  worker.rs  worker_types.rs
src/async_runtime/src/testing/: mock.rs  mod.rs
src/async_runtime/src/time/: clock.rs  mod.rs  wheel.rs
src/flags/: BUILD
src/kyron/: BUILD  Cargo.toml
src/kyron-foundation/: BUILD  Cargo.toml
src/kyron-foundation/src/: lib.rs  prelude.rs  types.rs
src/kyron-foundation/src/base/: fast_rand.rs  mod.rs
src/kyron-foundation/src/cell/: mod.rs
src/kyron-foundation/src/containers/: growable_vec.rs  intrusive_linked_list.rs  mod.rs  mpmc_queue.rs  queue.rs  reusable_objects.rs  reusable_vec_pool.rs  spmc_queue.rs  trigger_queue.rs  vector_extension.rs
src/kyron-foundation/src/macros/: log.rs  mod.rs  score_debug.rs
src/kyron-foundation/src/sync/: foundation_atomic.rs  mod.rs
src/kyron-foundation/src/threading/: mod.rs  thread_wait_barrier.rs
src/kyron/doc/: features.md  io_driver.md
src/kyron/examples/: logging.rs  main_macro.rs  mpmc.rs  playground.rs  safety_task.rs  select.rs
src/kyron/examples/config/: logging.json
src/kyron/src/: lib.rs  prelude.rs  safety.rs
src/kyron/src/channels/: mod.rs  spmc_broadcast.rs  spsc.rs
src/kyron/src/common/: mod.rs  types.rs
src/kyron/src/core/: mod.rs  types.rs
src/kyron/src/futures/: mod.rs  reusable_box_future.rs  sleep.rs  yield_now.rs
src/kyron/src/io/: async_registration.rs  bridgedfd.rs  driver.rs  mod.rs  read_buf.rs  traits.rs
src/kyron/src/io/utils/: mod.rs  read_future.rs  write_future.rs
src/kyron/src/ipc/: mod.rs
src/kyron/src/ipc/iceoryx2/: event.rs  mod.rs
src/kyron/src/macros/: log.rs  mod.rs  select.rs
src/kyron/src/mio/: mod.rs  poll.rs  rawfd.rs  registry.rs  types.rs
src/kyron/src/mio/net/: mod.rs  tcp_listener.rs  tcp_stream.rs  udp.rs
src/kyron/src/mio/selector/: mod.rs
src/kyron/src/mio/selector/unix/: poll.rs
src/kyron/src/net/: mod.rs  tcp_listener.rs  tcp_stream.rs  udp_socket.rs  utils.rs
src/kyron/src/runtime/: async_runtime.rs  mod.rs  runtime_impl.rs
src/kyron/src/scheduler/: context.rs  driver.rs  execution_engine.rs  join_handle.rs  mod.rs  safety_waker.rs  scheduler_mt.rs  waker.rs
src/kyron/src/scheduler/task/: async_task.rs  mod.rs  task_context.rs  task_state.rs
src/kyron/src/scheduler/workers/: dedicated_worker.rs  mod.rs  safety_worker.rs  worker.rs  worker_types.rs
src/kyron/src/testing/: mock.rs  mock_context.rs  mod.rs
src/kyron/src/time/: clock.rs  mod.rs  wheel.rs
src/logging_tracing/: BUILD  Cargo.toml
src/logging_tracing/src/: lib.rs  log.rs  prelude.rs  score_log.rs  tracing.rs
tests/: README.md
virtualization/: BUILD
(+160 files in other folders)
