[package]
name = "rust_test_scenarios"
version.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version ="4.5.38", features = ["derive"] }
orchestration = { path = "../../src/orchestration" }
async_runtime = { path = "../../src/async_runtime" }
foundation = { path = "../../src/foundation" }
