[package]
name = "rust_test_scenarios"
version.workspace = true
edition.workspace = true

[dependencies]
orchestration.workspace = true
async_runtime.workspace = true
foundation.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test_scenarios_rust = { git = "https://github.com/qorix-group/testing_tools.git", tag = "v0.2.3" }

[lints.clippy]
unwrap_used = "deny"
