[package]
name = "rust_test_scenarios"
version.workspace = true
edition.workspace = true

[dependencies]
kyron.workspace = true
kyron-foundation = { workspace = true, features = ["tracing"] }
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
test_scenarios_rust = { git = "https://github.com/eclipse-score/testing_tools.git", tag = "v0.3.0" }

[lints.clippy]
unwrap_used = "deny"
