[package]
name = "async_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
foundation.workspace = true

iceoryx2-pal-concurrency-sync.workspace = true
iceoryx2-bb-container.workspace = true
iceoryx2-bb-posix.workspace = true
libc.workspace = true

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }



[dev-dependencies]
testing.workspace = true


[features]
runtime-api-mock = []

[lints]
workspace = true
