[package]
name = "async_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
foundation.workspace = true

iceoryx2 = {workspace = true, optional = true}
iceoryx2-cal = {workspace = true, optional = true}


iceoryx2-pal-concurrency-sync.workspace = true
iceoryx2-bb-container.workspace = true
iceoryx2-bb-posix.workspace = true
iceoryx2-bb-lock-free.workspace = true
iceoryx2-bb-elementary.workspace = true
iceoryx2-bb-elementary-traits.workspace = true
libc.workspace = true
async_runtime_macros.workspace = true

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }


[dev-dependencies]
testing.workspace = true
testing_macros.workspace = true

[features]
default = ["iceoryx2_ipc"]
runtime-api-mock = []
iceoryx2_ipc = ["iceoryx2", "iceoryx2-cal"]
vm_time_correction = [] # When running SOME VMs under Windows, the time can travel backward due to wrong assumptions between Linux and Windows

[lints]
workspace = true
