[package]
name = "kyron-foundation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true


[dependencies]
iceoryx2-bb-container.workspace = true
iceoryx2-bb-derive-macros.workspace = true
iceoryx2-bb-elementary.workspace = true
iceoryx2-bb-elementary-traits.workspace = true
iceoryx2-bb-lock-free.workspace = true
iceoryx2-bb-memory.workspace = true
iceoryx2-bb-posix.workspace = true
iceoryx2-bb-system-types.workspace = true
iceoryx2-bb-testing.workspace = true
iceoryx2-bb-threadsafe.workspace = true
iceoryx2-pal-concurrency-sync.workspace = true

tracing = { workspace = true, optional = true }
log = { workspace = true, optional = true }
score_log = { workspace = true, optional = true }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints]
workspace = true

[dev-dependencies]
kyron-testing.workspace = true

[features]
default = []
score-log = ["dep:score_log"]
log = ["dep:log"]
tracing = ["dep:tracing"]
