[package]
name = "kyron"
version.workspace = true
edition.workspace = true

[dependencies]
kyron_foundation.workspace = true

iceoryx2 = {workspace = true, optional = true}
iceoryx2-cal = {workspace = true, optional = true}


iceoryx2-pal-concurrency-sync.workspace = true
iceoryx2-bb-container.workspace = true
iceoryx2-bb-posix.workspace = true
iceoryx2-bb-lock-free.workspace = true
iceoryx2-bb-elementary.workspace = true
iceoryx2-bb-elementary-traits.workspace = true
libc.workspace = true
kyron_macros.workspace = true

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }


[dev-dependencies]
testing.workspace = true
testing_macros.workspace = true

[features]
default = ["iceoryx2_ipc"]
runtime-api-mock = []
iceoryx2_ipc = ["iceoryx2", "iceoryx2-cal"]

# When running SOME VMs under Windows, the time can travel backward due to wrong assumptions between Linux and Windows
# For now we enable it always on x86_64, but when you run native Linux you can disable it by this flag
disable_vm_correction = []

[lints]
workspace = true
