[package]
name = "kyron"
repository = "https://github.com/eclipse-score/kyron"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures", "automotive"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
kyron-foundation.workspace = true
kyron-macros.workspace = true

iceoryx2 = { workspace = true, optional = true }
iceoryx2-cal = { workspace = true, optional = true }
libc.workspace = true


[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }


[dev-dependencies]
kyron-testing.workspace = true
kyron-testing-macros.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["iceoryx2-ipc", "tracing"]
runtime-api-mock = []
iceoryx2-ipc = ["iceoryx2", "iceoryx2-cal"]

# When running SOME VMs under Windows, the time can travel backward due to wrong assumptions between Linux and Windows
# For now we enable it always on x86_64, but when you run native Linux you can disable it by this flag
disable_vm_correction = []

score-log = ["kyron-foundation/score-log"] # Bazel compatibility only
log = ["kyron-foundation/log"]
tracing = ["kyron-foundation/tracing"]

[lints]
workspace = true
