[package]
name = "logging_tracing"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_os = "nto"))'.dependencies]
tracing-perfetto-sdk-schema.workspace = true
tracing-perfetto-sdk-layer.workspace = true
