[package]
name = "logging_tracing"
version.workspace = true
edition.workspace = true

[dependencies]
kyron-foundation = { workspace = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-perfetto-sdk-schema = { workspace = true, optional = true }
tracing-perfetto-sdk-layer = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
iceoryx2 = { workspace = true, optional = true }
env_logger = { version = "0.11.8", optional = true }

[features]
default = ["tracing"]
score-log = ["kyron-foundation/score-log"] # Bazel compatibility only
log = ["kyron-foundation/log", "dep:env_logger", "iceoryx2/logger_log"]
tracing = [
    "kyron-foundation/tracing",
    "dep:tracing-appender",
    "dep:tracing-subscriber",
    "dep:tracing",
    "iceoryx2/logger_tracing",
]
perfetto = [
    "tracing",
    "dep:tracing-perfetto-sdk-layer",
    "dep:tracing-perfetto-sdk-schema",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("bazel_build_iceoryx2_qnx8"))',
] }
